# mlc

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
docs/: DESIGN.md  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md
examples/: basic_usage.py  benchmark_jit.py
python/: __init__.py  tensor_py.cpp  test_python_bindings.py
src/codegen/: CMakeLists.txt  ir_generator.cpp  ir_generator.h  jit_compiler.cpp  jit_compiler.h  kernel_cache.cpp  kernel_cache.h  llvm_context.cpp  llvm_context.h  llvm_module_builder.cpp  llvm_module_builder.h
src/core/: broadcast.cpp  broadcast.h  operation.cpp  operation.h  tensor.cpp  tensor.h
src/ops/: add_op.cpp
src/runtime/: executor.cpp  executor.h  jit_executor.cpp  jit_executor.h
tests/: test_add.cpp  test_broadcast.cpp  test_jit_executor.cpp  test_tensor.cpp
